# DFSweep

./: .gitignore  CMakeLists.txt  README.md
3rd/MeshLib/Geometry/: quat.h
3rd/MeshLib/Mesh/: BaseMesh.h
cu/: DistanceFieldKernels.cu
cuh/: DistanceFieldCUDA.cuh
include/: CTMesh.h  ColorImplementer.h  CuttingBox.h  DFContainer.h  MeshCutter.h  MeshViewer.h  OctTree.h  PrimeData.h  SweepDirDetector.h  SweepDirFilter.h  SweepDirSpliter.h
src/: ColorImplementer.cpp  CuttingBox.cpp  DFContainer.cpp  MeshCutter.cpp  MeshViewer.cpp  SweepDirDetector.cpp  SweepDirFilter.cpp  SweepDirSpliter.cpp  main.cpp
